# ruff-lsp

./: .gitignore  LICENSE  Makefile  README.md  get-oldest-supported-version.py  justfile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
ruff_lsp/: __init__.py  __main__.py  _debug_server.py  jsonrpc.py  runner.py  server.py  settings.py  utils.py
tests/: conftest.py  test_format.py  test_server.py
tests/client/: constants.py  defaults.py  session.py  utils.py
tests/lsp_test_client/: constants.py  defaults.py  session.py  utils.py
