[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruff-lsp"
dynamic = ["version"]
description = "A Language Server Protocol implementation for Ruff."
authors = [
  { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" },
]
maintainers = [
  { name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" },
]
requires-python = ">=3.7"
license = "MIT"
keywords = ["ruff", "lsp", "language-server", "language-server-protocol", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
urls = { repository = "https://github.com/astral-sh/ruff-lsp" }
dependencies = [
  "packaging>=23.1",
  "pygls>=1.1.0",
  "lsprotocol>=2023.0.0",
  "ruff>=0.0.274",
  "typing_extensions",
]

[project.optional-dependencies]
dev = [
  "mypy==1.4.1",
  "pip-tools>=6.13.0,<7.0.0",
  "pytest>=7.3.1,<8.0.0",
  "pytest-asyncio==0.21.2",
  "python-lsp-jsonrpc==1.0.0",
]

[project.scripts]
ruff-lsp = "ruff_lsp.__main__:main"

[tool.hatch.version]
path = "ruff_lsp/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "Q",
  "UP",
  "I",
  "N",
  "T201",
  "T203",
]

[tool.mypy]
files = ["ruff_lsp", "tests"]
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--tb=short"

[[tool.mypy.overrides]]
module = [
  "debugpy.*",
  "lsprotocol.*",
  "pygls.*",
  "pylsp_jsonrpc.*",
]
ignore_missing_imports = true
